# wasm-junkyard

./: Cargo.toml  README.md
benchmark/: package.json
bloom-filter/: Cargo.toml  LICENSE  README.md
bloom-filter/src/: lib.rs
bloom-filter/web/: bloom.mjs  index.html
draw-wasm/: README.md
draw-wasm/benchmark/: index.mjs  package-lock.json
lzw-codec/: Cargo.toml  LICENSE  README.md
lzw-codec/src/: lib.rs
lzw-codec/tests/: web.rs
multi-search/: Cargo.toml  LICENSE  README.md  rust-toolchain
multi-search/src/: lib.rs
multi-search/web/: entry.mjs  index.html  mod.ts  worker.mjs
parallel-search/: Cargo.toml  README.md
parallel-search/src/: lib.rs
parallel-search/web/: comlink.mjs  entry.mjs  index.html  mod.ts  worker.mjs
simple-draw/: .gitignore  Cargo.toml  README.md
simple-draw/benchmark/: index.mjs  package-lock.json  package.json
simple-draw/src/: lib.rs
simple-draw/tests/: web.rs
tests/: web.rs
