[package]
name = "lzw-codec"
version = "0.1.0"
authors = ["郑达里 <d@liwa.li>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.92"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
web-sys = { version = "0.3.69", features = ["console"], optional = true }
fnv = "1.0.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
# Tell `rustc` to optimize for small code size.
# opt-level = "z"
# lto = true
