[package]
name = "parallel-search"
version = "0.1.0"
authors = ["Dali Zheng <d@liwa.li>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
sublime_fuzzy = { version = "0.7.0", features = ["serde_support"] }
serde-wasm-bindgen = "0.4.5"
serde = { version = "1.0.152", features = ["derive"] }
rayon = "1.6.1"
wasm-bindgen-rayon = { version = "1.0.3", features = ["no-bundler"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
